[package]
name = "mediator-sys"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Event mediator for synchronous and asynchronous environments"
readme = "README.md"
repository = "https://github.com/nyvs/mediator-sys"

[dependencies]
async-std = { version = "1.12.0", optional = true }
async-trait =  { version = "0.1.57", optional = true }

[features]
default = []
async = ["async-trait", "async-std"]