[package]
name = "mediator-sys"
version = "2.0.2"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Jan Strathmann <jwstrathmann@gmail.com>"]
keywords = ["mediator", "eventmediator", "eventmanager", "events", "event"]
categories = ["asynchronous", "data-structures"]
description = "Strongly typed, extensible event mediator"
repository = "https://github.com/nyvs/mediator-sys"
homepage = "https://github.com/nyvs/mediator-sys"

[dependencies]
async-std = { version = "1.12.0", optional = true }
async-trait =  { version = "0.1.57", optional = true }

[features]
default = []
async = ["async-trait", "async-std"]

[package.metadata.docs.rs]
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
